--- a/config.toml
+++ b/config.toml
@@ -1,12 +1,12 @@
-baseURL = "http://kubernetesbyexample.com"
-DefaultContentLanguage = "en"
-title = "Kubernetes By Example"
+baseURL = "http://kubernetes.egitim.io"
+DefaultContentLanguage = "tr"
+title = "Kubernetes Eğitimi"
 theme = "beautifulhugo"
 metaDataFormat = "yaml"
 googleAnalytics = "UA-34425776-2"
 
 [Params]
-  subtitle = "Brought to you by the OpenShift team"
+  subtitle = "(Çeviri devam etmektedir)"
   logo = "img/kbe-logo.png"
   favicon = "img/kbe-logo.ico"
   dateFormat = "2006-01-02"
@@ -14,9 +14,9 @@ googleAnalytics = "UA-34425776-2"
   rss = false
 
 [[menu.main]]
-  name = "Try out!"
+  name = "Kendin dene!"
   url = "diy/"
 
 [[menu.main]]
-  name = "Contribute"
-  url = "https://github.com/openshift-evangelists/kbe"
+  name = "Katkıda bulun!"
+  url = "https://github.com/ykocaman/kubernetes.egitim.io"
